# appdrop

./: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  README.md  fix_and_push.sh  index.html  live_test.sh  package-lock.json  package.json  setup_github.sh  vite.config.ts
.github/workflows/: ci.yml
engine/: auth.py  github_parser.py  main.py  requirements.txt
registry/: index.json
registry/apps/: automatic1111.json  bark.json  comfyui-manager.json  comfyui.json  flowise.json  fooocus.json  gpt4all.json  invokeai.json  jan.json  koboldcpp.json  langflow.json  llama-cpp.json  lobe-chat.json  localai.json  mlx-lm.json  musicgen.json  ollama.json  open-webui.json  real-esrgan.json  sadtalker.json  stable-diffusion-cpp.json  stable-video-diffusion.json  text-gen-webui.json  tortoise-tts.json  video-retalking.json  wav2lip.json  whisper-cpp.json  whisper-webui.json
registry/pending/: another-app.json  live-test-app.json  my-cool-app.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: InstallModal.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: useApps.ts  useAuth.ts  useRegistry.ts  useToast.ts
src/lib/: api.ts
src/pages/: AppDetail.tsx  AppStore.tsx  Auth.tsx  MyApps.tsx  Onboarding.tsx  Settings.tsx
src/test/: utils.test.ts
tests/: test_engine.py  test_github_parser.py  test_pipeline.py  test_week2.py  test_week3.py  test_week4.py  test_week6.py
web/: next.config.js  package.json
web/app/: layout.tsx  page.tsx
