[package]
name = "appdrop"
version = "0.5.0"
description = "Turn any GitHub repo into a running app — no terminal, no code"
authors = ["s1meer"]
license = "MIT"
repository = "https://github.com/s1meer/appdrop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "shell-open",
  "window-all",
  "app-all",
  "fs-read-file",
  "fs-write-file",
  "os-all",
  "http-all",
  "notification-all",
  "system-tray",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
